[package]
name = "madden-demotion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.6"
